Change font family to Montserrat

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 * {
   padding: 0;
   margin: 0;
+  font-family: 'Montserrat', sans-serif;
   --primary-color: #252525;
+  --secondary-color: #505050;
   --spotify-color: #1DB954;
   --hover-color: #168d40;
 }
@@ -9,18 +11,4 @@
 body
 {
   background-color: var(--primary-color);
-}
-
-html {
-  font-size: 16px;
-}
-@media screen and (min-width: 320px) {
-  html {
-    font-size: calc(16px + 6 * ((100vw - 320px) / 680));
-  }
-}
-@media screen and (min-width: 1000px) {
-  html {
-    font-size: 22px;
-  }
 }
