--- a/src/pages/main/styles.css
+++ b/src/pages/main/styles.css
@@ -6,3 +6,11 @@
   grid-template-columns: 100%;
   grid-template-rows: 70% 20% 10%;
 }
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .mainDiv
+  {
+    grid-template-columns: 30% 70%;
+    grid-template-rows: repeat(2, 50%);
+  }
+}
