--- a/src/pages/main/styles.css
+++ b/src/pages/main/styles.css
@@ -14,3 +14,11 @@
     grid-template-rows: repeat(2, 50%);
   }
 }
+
+@media screen and (min-width: 1024px) {
+  .mainDiv
+  {
+    grid-template-columns: 20% 80%;
+    grid-template-rows: 88% 12%;
+  }
+}
