--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   margin: 0;
   font-family: 'Montserrat', sans-serif;
   --primary-color: #252525;
-  --secondary-color: #505050;
+  --secondary-color: #3d3d3d;
   --spotify-color: #1DB954;
   --hover-color: #168d40;
 }
