--- a/src/components/Track/styles.css
+++ b/src/components/Track/styles.css
@@ -5,6 +5,7 @@
   align-items: center;
   padding: 0.5rem;
   margin: 1rem 0;
+  border-radius: 10px;
 }
 
 .trackList-item-img
@@ -33,4 +34,16 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.trackList-item-duration
+{
+  color: #efefef;
+  font-size: 16px;
+  margin-right: 1rem;
+}
+
+.trackList-item:hover
+{
+  background-color: #303030;
 }
