--- a/src/components/TracksList/styles.css
+++ b/src/components/TracksList/styles.css
@@ -1,9 +1,19 @@
-.TrackList
+.tracksListDiv
+{
+  margin-top: 2rem;
+  padding: 1rem;
+}
+
+.tracksList
 {
   width: 100%;
   height: fit-content;
   box-sizing: border-box;
-  margin-top: 2rem;
-  padding: 1rem;
   list-style: none;
+}
+
+.tracksListDiv-title
+{
+  font-size: 24px;
+  margin-bottom: 1rem;
 }
