--- a/src/components/ListOfResults/RelevantResult/styles.css
+++ b/src/components/ListOfResults/RelevantResult/styles.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 0.5rem;
+  padding: 1rem;
   margin: 1rem 0;
   border-radius: 10px;
   cursor: default;
@@ -43,40 +43,57 @@
 {
   display: none;
   margin: 0.5rem 0;
-  padding: 0.5rem 1rem;
+  padding: 0.25rem 0.5rem;
+  font-weight: 700;
   line-height: 1em;
   width: fit-content;
   font-size: 14px;
   border-radius: 1rem;
-  background: var(--secondary-color);
+  background: #222;
 }
 
 @media screen and (min-width: 768px) {
   .listOfResultsDiv-relevant
   {
-    width: 50%;
-    align-items: flex-end;
+    width: 45%;
+    height: 40vh;
+    flex-direction: column;
+    align-items: flex-start;
+    background: var(--secondary-color);
+    border-radius: 1rem;
+    box-sizing: border-box;
   }
 
   .listOfResultsDiv-relevant-img
   {
-    width: 100%;
+    width: 20vh;
     aspect-ratio: 1/1;
+    margin-bottom: 1rem;
+    border-radius: 5px;
   }
 
   .listOfResultsDiv-relevant-info
   {
     font-size: 16px;
-    line-height: 1.75em;
+    line-height: 2.5em;
   }
 
   .listOfResultsDiv-relevant-info-trackTitle
   {
-    font-size: 20px;
+    font-size: 22px;
+  }
+
+  .listOfResultsDiv-relevant-info-trackArtists
+  {
+    width: fit-content;
+    display: inline;
+    font-size: 14px;
   }
 
   .listOfResultsDiv-relevant-info-trackType
   {
-    display: block;
+    display: inline;
+    margin: 1rem;
+
   }
 }
