--- a/src/pages/search/styles.css
+++ b/src/pages/search/styles.css
@@ -1,6 +1,9 @@
 .searchDiv
 {
-  padding: 1rem;
+  padding: 2rem;
+  width: 100%;
+  overflow-y: scroll;
+  box-sizing: border-box;
 }
 
 .searchDiv-form 
